--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="compiled/src/models/Card.js"></script>
     <script src="compiled/src/collections/Hand.js"></script>
     <script src="compiled/src/collections/Deck.js"></script>
+    <script src="compiled/src/collections/DiscardPile.js"></script>
+    
     <script src="compiled/src/models/App.js"></script>
     <script src="compiled/src/models/Game.js"></script>
 
